--- a/pages/speak.html
+++ b/pages/speak.html
@@ -50,7 +50,7 @@
 				<option value="2.0">2.0</option>
 			</select>
 		</div>
-		<div id="speak-option-volume" class="speak-option">
+		<!-- <div id="speak-option-volume" class="speak-option">
 			Volume:
 			<select id="speak-volume" class="speak-select" style="max-width: 50px; min-width: 50px" onchange="SPEAK.save()">
 				<option>0</option>
@@ -65,11 +65,20 @@
 				<option>9</option>
 				<option>10</option>
 			</select>
-		</div>
-		<div id="speak-play" class="app-button app-button app-button-small" onclick="SPEAK.convert()">Convert</div>
+		</div> -->
+		<div id="speak-convert" class="app-button app-button app-button-small" onclick="SPEAK.convert()">Convert</div>
 	</div>
 	<div id="speak-text-box"><textarea id="speak-text" placeholder="Enter Text Here" oninput="SPEAK.check()"></textarea></div>
 
-	<div id="speak-player-box" class="app-hidden"><audio id="speak-player" controls></audio></div>
+	<div id="speak-player-box" class="">
+		<div id="speak-player-controls">
+			<div id="speak-play" class="app-button app-button-small speak-icon speak-icon-play" onclick="PLAYER.play()"></div>
+			<div id="speak-pause" class="app-button app-button-small speak-icon speak-icon-pause app-hidden" onclick="PLAYER.pause()"></div>
+			<input type="range" id="speak-progress" min="0" max="100" value="0" step="1" oninput="PLAYER.seek()" disabled />
+			<span id="current-time">0:00</span> / <span id="duration">0:00</span>
+			<div id="speak-play" class="app-button app-button-small speak-icon speak-icon-download" onclick="PLAYER.download()"></div>
+			<audio id="speak-player" class="app-hidden" src="assets/audio/speak-nova.mp3"></audio>
+		</div>
+	</div>
 	<div id="speak-example-box" class="app-hidden"><audio id="speak-example" controls></audio></div>
 </div>
