--- a/pages/speak.html
+++ b/pages/speak.html
@@ -73,14 +73,14 @@
 		<div id="speak-count">0 of 1000</div>
 	</div>
 
-	<div id="speak-player-box" class="">
+	<div id="speak-player-box" class="app-hidden">
 		<div id="speak-player-controls">
 			<div id="speak-play" class="app-button app-button-small speak-icon speak-icon-play" onclick="PLAYER.play()"></div>
 			<div id="speak-pause" class="app-button app-button-small speak-icon speak-icon-pause app-hidden" onclick="PLAYER.pause()"></div>
 			<input type="range" id="speak-progress" min="0" max="100" value="0" step="any" oninput="PLAYER.seek()" />
 			<span id="speak-current">0:00</span> / <span id="speak-duration">0:00</span>
 			<div id="speak-play" class="app-button app-button-small speak-icon speak-icon-download" onclick="PLAYER.download()"></div>
-			<audio id="speak-player" class="app-hidden" src="assets/audio/speak-nova.mp3"></audio>
+			<audio id="speak-player" class="app-hidden" src=""></audio>
 		</div>
 	</div>
 	<div id="speak-example-box" class="app-hidden"><audio id="speak-example" controls></audio></div>
