--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta id="app-theme-color" name="theme-color" content="#121c2d" />
-		<link id="app-favicon" rel="icon" href="icons/app-icon.png" />
 		<link rel="manifest" href="manifest.json" />
 		<link rel="stylesheet" href="app.css" />
 		<title id="app-title"></title>
+		<script defer src="assets/scripts/support.js"></script>
 		<script defer src="app.js"></script>
 	</head>
 	<body>
@@ -16,16 +16,14 @@
 			<div id="app-cover-text">Loading...</div>
 		</div>
 		<header id="app-header">
-			<div id="app-header-info">
-				<img id="app-header-icon" src="icons/app-icon.png" alt="Icon" />
-				<span id="app-header-name"></span>
+			<div id="app-info">
+				<img id="app-icon" src="" alt="App Icon" />
+				<span id="app-name" class="app-name"></span>
 			</div>
-			<!-- <nav class="app-nav">
-				Optional Nav Items
-			</nav> -->
+			<nav id="app-nav" class="app-hidden"></nav>
 			<div id="app-install" class="app-button app-install app-hidden">
-				<div class="app-button-icon app-icon-download"></div>
-				<div class="app-button-text">Install</div>
+				<div class="app-icon app-icon-download"></div>
+				Install
 			</div>
 		</header>
 		<main class="app-container">
