--- a/pages/speak.html
+++ b/pages/speak.html
@@ -79,7 +79,7 @@
 			<div id="speak-pause" class="app-button app-button-small speak-icon speak-icon-pause app-hidden" onclick="PLAYER.pause()"></div>
 			<input type="range" id="speak-progress" min="0" max="100" value="0" step="any" oninput="PLAYER.seek()" />
 			<span id="speak-current">0:00</span> / <span id="speak-duration">0:00</span>
-			<div id="speak-play" class="app-button app-button-small speak-icon app-icon-download" onclick="PLAYER.download()"></div>
+			<div id="speak-download" class="app-button app-button-small speak-icon app-icon-download" onclick="PLAYER.download()"></div>
 			<audio id="speak-player" class="app-hidden" src=""></audio>
 		</div>
 	</div>
